examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sogo-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: sogo
